# kobuki_velocity_smoother

./: .cproject  .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
config/: velocity_smoother_params.yaml
include/kobuki_velocity_smoother/: velocity_smoother.hpp
include/velocity_smoother/: velocity_smoother.hpp
launch/: velocity_smoother-composed-launch.py  velocity_smoother-launch.py
src/: velocity_smoother.cpp  velocity_smoother_node.cpp
test/: README.md  plot  test_broken.py  test_translational_input.py  test_translational_smoothing.py  translational_command_profile.py
