<package format="2">
  <name>kobuki_velocity_smoother</name>
  <version>0.15.0</version>
  <description>
     Bound incoming velocity messages according to robot velocity and acceleration limits.
  </description>
  <author>Jorge Santos Simon</author>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">https://index.ros.org/p/kobuki_velocity_smoother/github-kobuki-base-velocity_smoother/</url>
  <url type="repository">https://github.com/kobuki-base/kobuki_velocity_smoother</url>
  <url type="bugtracker">https://github.com/kobuki-base/kobuki_velocity_smoother/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-matplotlib</test_depend>
  <test_depend>ros2test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
